--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,6 +18,10 @@ jobs:
         run: |
           echo "This job was triggered by: ${{ github.event_name }}"
           echo "Branch name: ${{ github.ref}}"
+      
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      
       - name: List files
         run: |
           echo "This repo contains: "
