--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -49,7 +49,7 @@ jobs:
           sleep 15
   Production:
     runs-on: ubuntu-latest
-    if: github.inputs.environment == 'Production'
+    if: github.event.inputs.environment == 'Production'
     needs: [Test, Load-Test]
     environment: 
       name: Production
