--- a/.github/workflows/resuable.yml
+++ b/.github/workflows/resuable.yml
@@ -3,13 +3,20 @@ on:
   workflow_call:
     inputs:
       who-to-greet:
-        description: 'The person to greet'
+        description: 'Person to greet'
         type: string
         required: true
         default: World
+    outputs:
+      current-time:
+        description: 'Time when greeting.'
+        value: ${{ jobs.reusable-job.outputs.current-time }}
 jobs:
   reusable-job:
     runs-on: ubuntu-latest
     steps:
       - name: Greet someone
         run: echo "Hello ${{ inputs.who-to-greet }}"
+      - name: Set time
+        id: time
+        run: echo "time=$(date)" >> $GITHUB_OUTPUT
